@@ -1,3 +1,9 @@
+2009-01-25 Chris Allegretta <chrisa@asty.org>
+	* files.c (open_file), nanorc.c (parse_include): Don't get_full_path on 
+	  included rc files, due to it potentially impacting the ability
+	  to read files in nano's cwd().  Fixes Savnanah bug #25297 reported by Mike 
+	  Frysinger)
+
 2009-01-24 Chris Allegretta <chrisa@asty.org>
 	* First pass at some caching of caching color info.  Right now it's only for
 	  multi-line regexes but this may not be enough to increase performance.
